feat: support multiple + parallel outputs (#3)